# Paper-IF2211-token-budgeted-rag-context-packing

./: README.md  pyproject.toml
data/: chunks.jsonl  stratrag_chunks.jsonl
experiments/: run_experiments.py
rag_context_packing/: __init__.py
results_stratrag/: experiment_results.csv  summary.md
scripts/: import_stratrag.py
src/rag_context_packing/: __init__.py  cli.py  data.py  evaluation.py  models.py  scoring.py  selectors.py  visualization.py
